# OpenDataSH_twitter_notifier

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Readme.md  config_example.toml
src/: ckan_api.rs  cli.yml  config.rs  main.rs  twitter.rs
