[package]
name = "OpenDataSH_twitter_notifier"
version = "0.1.0"
authors = ["Marcel Radzio <mtrnord1@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
clap = {version = "~2.33.0", features = ["yaml"]}
toml = "0.5"
serde = { version = "1", features = ["derive"] }
simple_logger = "1.3.0"
log = "0.4.6"
twitter-text = "0.1.0"
egg-mode = { version = "0.13", features = ["hyper-rustls"], default-features = false }
tokio = "0.1.21"