[package]
name = "OpenDataSH_twitter_notifier"
version = "0.1.2"
authors = ["Marcel Radzio <mtrnord1@gmail.com>"]
edition = "2018"
description = "A twitter bot that posts a message for new datasets on the OpenData platform of Schleswig-Holstein"
license = "AGPL-3.0"
repository = "https://github.com/Nucleon-eV/OpenDataSH_twitter_notifier"

include = [
    "src/cli.yml",
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
hyper = "0.12"
clap = {version = "~2.33.0", features = ["yaml"]}
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "1.3.0"
log = "0.4.8"
twitter-text = "0.1.0"
egg-mode = { version = "0.13", features = ["hyper-rustls"], default-features = false }
tokio = "0.1"
futures = "0.1.28"
hyper-tls = "0.3.2"
unicode-segmentation = "1.3.0"