[package]
name = "OpenDataSH_twitter_notifier"
version = "0.1.2"
authors = ["Marcel Radzio <mtrnord1@gmail.com>"]
edition = "2018"
description = "A twitter bot that posts a message for new datasets on the OpenData platform of Schleswig-Holstein"
license = "AGPL-3.0"
repository = "https://github.com/Nucleon-eV/OpenDataSH_twitter_notifier"

include = [
    "src/cli.yml",
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git"}
clap = {version = "~2.33.0", features = ["yaml"]}
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "1.3.0"
log = "0.4.8"
egg-mode = { git = "https://github.com/MTRNord/twitter-rs.git", rev = "71d6784e510ec3e5daa63d5b9b446ce0b9e6e021"}
tokio = { git = "https://github.com/tokio-rs/tokio" }
futures-core-preview = { version = "0.3.0-alpha.18" }
futures-util-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
unicode-segmentation = "1.3.0"
futures-locks = "0.3"

[patch."https://github.com/hyperium/hyper.git"]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}

[patch."https://github.com/hyperium/hyper"]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}

[patch.crates-io]
hyper = { git = "https://github.com/yotamofek/hyper.git", rev = "d79e9c6a5ebe7b131791b66c471930fc222bdd5b"}